--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "homepage": "https://github.com/Max-Berkowitz/attenuationLevels#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "bindings": "^1.3.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "node-addon-api": "^1.6.1",
+    "node-gyp": "^3.8.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "styled-components": "^3.4.6",
@@ -71,6 +74,7 @@
       "transform-decorators-legacy"
     ]
   },
+  "gypfile": "true",
   "jest": {
     "testURL": "http://localhost/"
   }
