--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digipotValueSetter",
+  "name": "digipotvaluesetter",
   "version": "1.0.0",
   "description": "",
   "main": "server/index.js",
