--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "axios": "^0.18.0",
     "bindings": "^1.3.1",
     "body-parser": "^1.18.3",
-    "csv-parser": "^2.1.0",
+    "csv-parse": "^2.1.0",
     "csv-stringify": "^5.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
