--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "set NODE_ENV='test' && jest",
     "start": "node server/index.js",
+    "cpp-build": "node-gyp rebuild",
     "react-dev": "webpack -d --watch --optimize-minimize --optimize-occurrence-order --optimize-dedupe --config webpack.config.js",
     "deployment-build": "webpack -p --progress --optimize-minimize --optimize-occurrence-order --optimize-dedupe --config webpack.config.js",
     "lint": "eslint .",
@@ -33,8 +34,7 @@
     "node-gyp": "^3.8.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "styled-components": "^3.4.6",
-    "webpack-node-externals": "^1.7.2"
+    "styled-components": "^3.4.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
